--- a/data-architect.html
+++ b/data-architect.html
@@ -69,6 +69,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=58d1e2cf1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
 <h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
@@ -149,7 +153,7 @@
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rivian.com/9534a527-465a-418a-a4ab-c9f5134f98c5'>Rivian Automotive - Battery Data Warehouse Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/rivian.com/9534a527-465a-418a-a4ab-c9f5134f98c5'>Rivian Automotive - Battery Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -169,7 +173,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697967836-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697967836-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -177,7 +181,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/qlik/job/oAZxafw0'>Qlik Careers - Analytics Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/qlik/job/oAZxafw0'>Qlik Careers - Analytics Data Architect</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -185,7 +189,7 @@
 <p><span class="badge badge-light">Richmond, VA, USA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/9exu73upgipych8suk6n7ywpba'>Senior Data Architect | Manifest Solutions</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/9exu73upgipych8suk6n7ywpba'>Senior Data Architect | Manifest Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -284,7 +288,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/data-architect-data-sme-7109'>Data Architect/Data SME - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/data-architect-data-sme-7109'>Data Architect/Data SME - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -354,7 +358,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">North America New York, New York  North America</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/information-data-architect-724'>Information / Data Architect - NATO Careers</a></h5> 
+<h5><a href='https://ncianato.referrals.selectminds.com/jobs/information-data-architect-724'>Information / Data Architect - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -390,7 +394,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cormac-corporation/job/ogokbfwT'>CORMAC Careers - Database Architect/ Database Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cormac-corporation/job/ogokbfwT'>CORMAC Careers - Database Architect/ Database Developer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -398,7 +402,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Apply online for the job of Big Data Architect at Tiger Analytics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://serviceplan.softgarden.io/job/4522369/Data-Engineer-Data-Architect-m-w-x-?jobDbPVId=12458529&amp;l=en'>Data Engineer / Data Architect (m/w/x)</a></h5> 
+<h5><a href='https://serviceplan.softgarden.io/job/4522369/Data-Engineer-Data-Architect-m-w-x-?jobDbPVId=12458529&amp;l=en'>Data Engineer / Data Architect (m/w/x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -406,7 +410,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/aarete/job/osCE7fwz'>AArete Careers - Sr. Data Architecture Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/aarete/job/osCE7fwz'>AArete Careers - Sr. Data Architecture Consultant</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -422,7 +426,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=ogwOafwu&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=n8GE6MwP&jvi=ogwOafwu,Job&jvk=Job'>Medidata Solutions Careers - Staff Systems Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=ogwOafwu&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=n8GE6MwP&jvi=ogwOafwu,Job&jvk=Job'>Medidata Solutions Careers - Staff Systems Architect</a></h5> 
 <p><span class="badge badge-light">New York, New York  Iselin, New Jersey</span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
@@ -454,7 +458,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nutanix/job/oDehbfw3'>Nutanix Careers - Database Specialist Solution Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nutanix/job/oDehbfw3'>Nutanix Careers - Database Specialist Solution Architect</a></h5> 
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -473,10 +477,6 @@ our Federal Client's business in defining requirements to support machine?...</p
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhvaVfwB&k=Job&j=oeEeafw0&__jvst=Employee+Referral&__jvsd=saagYhwk&__jvsc=Twitter&bid=n8AL2MwM'>Accudata Systems, Inc. Careers - Risk &amp; Compliance Solutions Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-07</p>
-<hr/>
-<h5><a href='https://ahsw.referrals.selectminds.com/jobs/sr-data-architect-18598'>Sr. Data Architect - Adventist Health Careers</a></h5> 
-<p><span class="badge badge-light">Roseville, California</span></p>
-<p>Posted on: 2019-10-07</p>
 <hr/>
 
 
